assets/css/style.css
/* ... */
/* screen sizes from 500px wide and down */
@media screen and (max-width: 501px) {

    #main-container {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    #logo {
        float: left;
        font-size: 200%;
        width: 100%;
        margin-left: 10px;
    }

    #main-container {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    #menu {
        font-size: 12px;
        letter-spacing: 1px;
        justify-content: space-between;
        display: flex;
        list-style-type: none;
        width: 100%;
        align-items: center;
        clear: left;
    }

    .dropbtn {
        font-size: 12px;
    }

    header {
        position: fixed;
        z-index: 99;
        top: 0;
        width: 100%;
        line-height: 55px;
        background-color: rgba(255, 255, 2555, 0.9)
    }

    #logo,
    #menu {
        line-height: 55px;
    }

    #hero-image {
        position: relative;
    }

    #cover-text {
        left: 0;
        position: absolute;
        width: fit-content;
    }

    #our-passion {
        height: auto;
        padding: 20px 70px;
        text-align: center;
        letter-spacing: 2px;
    }

    #our-passion h2 {
        font-size: 200%;
        padding-top: 20px;
    }

    #our-passion p {
        padding: 20px 0;
    }

    #left-side {
        margin-left: 0;
        margin-top: 50px;
        display: flex;
        align-items: center;
    }

    /* Footer */
    footer h3 {
        text-align: center;
        font-weight: bold;
        color: #353838;
        letter-spacing: 2px;
        height: 12px;
        padding-bottom: 2%;
    }

    #contact-info {
        height: 50px;
        padding: 2%;
        padding-top: 3%;
        padding-bottom: 3%;
    }

    #claims {
        padding-top: 3%;
        padding-bottom: 3%;
        height: 50px;
    }

    .social-networks {
        height: 50px;
        text-align: center;
        background-color: peachpuff;
        padding: 1% 0;
    }

    .social-networks>li {
        display: inline;
    }

    .social-networks em {
        font-size: 130%;
        margin: 1%;
        padding-left: 5%;
        padding-right: 5%;
        color: #4d4044;
    }

    footer p {
        height: 3px;
        text-align: center;
        font-size: small;
        font-family: Arial, Helvetica, sans-serif;
        letter-spacing: 2px;
        padding-bottom: 2%;
    }
}

